--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@types/nodemailer": "^7.0.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.344.0",
+    "mongoose": "^9.1.1",
     "nodemailer": "^6.9.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1"
   },
